sửa lại trang index và xóa thanh search của trang đăng nhập
